# model-router-mcp

./: .gitignore  .mcp.json.example  CLAUDE.md  README.md  classifier.py  models.py  pyproject.toml  server.py
